# svara

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
benches/: benchmarks.rs
docs/architecture/: adr-001-source-filter-model.md  adr-002-coarticulation-model.md  adr-003-formant-data.md  adr-004-scope-boundaries.md  overview.md
docs/development/: dependency-watch.md  integration-guide.md  roadmap.md  threat-model.md
docs/guides/: testing.md
examples/: basic.rs  error_handling.rs  prosody_patterns.rs  streaming.rs  voice_comparison.rs
scripts/: bench-history.sh
src/: bridge.rs  dsp.rs  error.rs  formant.rs  glottal.rs  lib.rs  lod.rs  math.rs  phoneme.rs  pool.rs  prosody.rs  render.rs  rng.rs  sequence.rs  smooth.rs  spectral.rs  tract.rs  trajectory.rs  voice.rs
supply-chain/: config.toml
tests/: integration.rs
