[package]
name = "svara"
version = "2.0.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "svara — Formant and vocal synthesis: glottal source, vocal tract modeling, phonemes, prosody"
homepage = "https://github.com/MacCracken/svara"
repository = "https://github.com/MacCracken/svara"
readme = "README.md"
documentation = "https://docs.rs/svara"
keywords = ["speech", "formant", "vocal", "synthesis", "phoneme"]
categories = ["multimedia::audio"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
hisab = { version = "1.2", default-features = false, features = ["num", "calc"] }
libm = "0.2"
naad = { version = "1", optional = true }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[features]
default = ["std", "naad-backend"]
full = ["std", "naad-backend", "logging"]
std = ["serde/std", "thiserror/std", "tracing/std"]
naad-backend = ["dep:naad"]
logging = ["dep:tracing-subscriber"]

[[bench]]
name = "benchmarks"
harness = false
